; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_string.c_ME_CallWordBreakProc.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/riched20/extr_string.c_ME_CallWordBreakProc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (i32*, i32, i32, i32)*, i32 }

@CP_ACP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ME_CallWordBreakProc(%struct.TYPE_3__* %0, i32* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32 (i32*, i32, i32, i32)*, i32 (i32*, i32, i32, i32)** %16, align 8
  %18 = icmp ne i32 (i32*, i32, i32, i32)* %17, null
  br i1 %18, label %25, label %19

19:                                               ; preds = %5
  %20 = load i32*, i32** %8, align 8
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* %9, align 4
  %23 = load i32, i32* %11, align 4
  %24 = call i32 @ME_WordBreakProc(i32* %20, i32 %21, i32 %22, i32 %23)
  store i32 %24, i32* %6, align 4
  br label %71

25:                                               ; preds = %5
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %42, label %30

30:                                               ; preds = %25
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = load i32 (i32*, i32, i32, i32)*, i32 (i32*, i32, i32, i32)** %32, align 8
  %34 = load i32*, i32** %8, align 8
  %35 = load i32, i32* %10, align 4
  %36 = load i32, i32* %9, align 4
  %37 = sext i32 %36 to i64
  %38 = mul i64 %37, 4
  %39 = trunc i64 %38 to i32
  %40 = load i32, i32* %11, align 4
  %41 = call i32 %33(i32* %34, i32 %35, i32 %39, i32 %40)
  store i32 %41, i32* %6, align 4
  br label %71

42:                                               ; preds = %25
  %43 = load i32, i32* @CP_ACP, align 4
  %44 = load i32*, i32** %8, align 8
  %45 = load i32, i32* %9, align 4
  %46 = call i32 @WideCharToMultiByte(i32 %43, i32 0, i32* %44, i32 %45, i8* null, i32 0, i32* null, i32* null)
  store i32 %46, i32* %13, align 4
  %47 = load i32, i32* %13, align 4
  %48 = call i8* @heap_alloc(i32 %47)
  store i8* %48, i8** %14, align 8
  %49 = load i8*, i8** %14, align 8
  %50 = icmp ne i8* %49, null
  br i1 %50, label %52, label %51

51:                                               ; preds = %42
  store i32 0, i32* %6, align 4
  br label %71

52:                                               ; preds = %42
  %53 = load i32, i32* @CP_ACP, align 4
  %54 = load i32*, i32** %8, align 8
  %55 = load i32, i32* %9, align 4
  %56 = load i8*, i8** %14, align 8
  %57 = load i32, i32* %13, align 4
  %58 = call i32 @WideCharToMultiByte(i32 %53, i32 0, i32* %54, i32 %55, i8* %56, i32 %57, i32* null, i32* null)
  %59 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %60 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %59, i32 0, i32 0
  %61 = load i32 (i32*, i32, i32, i32)*, i32 (i32*, i32, i32, i32)** %60, align 8
  %62 = load i8*, i8** %14, align 8
  %63 = bitcast i8* %62 to i32*
  %64 = load i32, i32* %10, align 4
  %65 = load i32, i32* %13, align 4
  %66 = load i32, i32* %11, align 4
  %67 = call i32 %61(i32* %63, i32 %64, i32 %65, i32 %66)
  store i32 %67, i32* %12, align 4
  %68 = load i8*, i8** %14, align 8
  %69 = call i32 @heap_free(i8* %68)
  %70 = load i32, i32* %12, align 4
  store i32 %70, i32* %6, align 4
  br label %71

71:                                               ; preds = %52, %51, %30, %19
  %72 = load i32, i32* %6, align 4
  ret i32 %72
}

declare dso_local i32 @ME_WordBreakProc(i32*, i32, i32, i32) #1

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32*, i32, i8*, i32, i32*, i32*) #1

declare dso_local i8* @heap_alloc(i32) #1

declare dso_local i32 @heap_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
